test/syc/bad/inlinegvar.c
/*
 * Invalid use of 'inline' with global variable declaration.
 */

inline int a;
